# WLS_Test

./: CMakeLists.txt  README.md  ToDo.txt  gui.mac  input.mac  input_fiber.mac  input_plate.mac  test.mac  vis.mac  vis_EFilter.mac  wls_Test.cc
Documentation/Fibers/: chapter_11_wls_fiber.doc
Results/Dallas/2-14-15/: Test1.root
Results/Dallas/5-5-15/: 10cm.root  1cm.root  1m.root  25cm.root  2m.root  50cm.root  5cm.root
Results/Dallas/7-20-15/: both.root  fiberOnly.root  neither.root  readme.txt  tentOnly.root
Results/Dallas/9-7-15/: Test01.root  Test25.root  Test50.root  Test75.root  Test99.root
Results/Jed/1-28-15/: Test1.root  Test2.root
Results/Jed/1-29-15/: Test1.root  Test1_Input.mac
Results/Jed/2-13-15/: Readme.txt  Test1.root
Results/Jed/2-16-15/: Readme.txt  TestNoMirror.root  TestWithMirror.root
Results/pictures/: G4OpenGL_0.eps  G4OpenGL_1.eps  G4OpenGL_2.eps  G4OpenGL_3.eps
include/: GPSPrimaryGeneratorAction.hh  NedmCellSide.hh  NedmDetectorParameters.hh  NedmOpTPB.hh  NedmPhotonDetHit.hh  NedmPhotonDetSD.hh  NedmPhysicsList.hh  NedmPhysicsListMessenger.hh  NedmWLSFiber.hh  WLS_TestActionInitialization.hh  WLS_TestAnalysis.hh  WLS_TestDetectorConstruction.hh  WLS_TestMaterials.hh  WLS_TestRunAction.hh  WLS_TestRunActionMessenger.hh  WLS_TestStackingAction.hh  WLS_TestSteppingAction.hh  WLS_TestTrackInformation.hh  WLS_TestTrackingAction.hh
src/: GPSPrimaryGeneratorAction.cc  NedmCellSide.cc  NedmDetectorParameters.cc  NedmOpTPB.cc  NedmPhotonDetHit.cc  NedmPhotonDetSD.cc  NedmPhysicsList.cc  NedmPhysicsListMessenger.cc  NedmWLSFiber.cc  WLS_TestActionInitialization.cc  WLS_TestDetectorConstruction.cc  WLS_TestMaterials.cc  WLS_TestRunAction.cc  WLS_TestRunActionMessenger.cc  WLS_TestStackingAction.cc  WLS_TestSteppingAction.cc  WLS_TestTrackInformation.cc  WLS_TestTrackingAction.cc
